[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[project]
name = "telescope.pics"
description = "telescope.pics"
license = "GPL-3.0-or-later"
authors = [ { name = "Stephen Kent", email = "smkent@smkent.net" } ]
readme = "README.md"
repository = "https://github.com/smkent/telescope.pics"
classifiers = [
    "Operating System :: OS Independent",
]
requires-python = ">=3.9,<4.0"
dynamic = [ "version" ]
dependencies = [
    "mkdocs (>=1.5.3)",
    "mkdocs-git-revision-date-localized-plugin (>=1.2.1)",
    "mkdocs-glightbox (>=0.3.7)",
    "mkdocs-material (>=9.4.14)",
]

[project.scripts]

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
cruft = "*"
poethepoet = "*"
pre-commit = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files --show-diff-on-failure"
help = "Check all files"

[tool.cruft]
skip = [".git"]

# vim: ft=cfg
